example/lib/src/generated/errors/errors_localization_hi.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Hindi (`hi`).
class ErrorsLocalizationHi extends ErrorsLocalization {
  ErrorsLocalizationHi([String locale = 'hi']) : super(locale);

  @override
  String get error => 'एक त्रुटि हुई';

  @override
  String get unexpectedError => 'एक अप्रत्याशित त्रुटि हुई';

  @override
  String get bugReportSentText => 'बग रिपोर्ट सफलतापूर्वक भेजी गई।';
}
